# roc-todos

./: .env  .gitignore  Dockerfile  README.md  todo.roc  todos.roc
migrations/: 20220730060728_create_todos.sql
platform/: .gitignore  Cargo.toml  Sql.roc  build.rs  glue_gen.roc  main.roc
platform/src/: glue.rs  lib.rs
