[package]
name = "host"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "../../roc/crates/roc_std" }
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "sqlite" ] }
libc = "0.2.126"
stackalloc = "1.2.0"
dotenvy = "0.15.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[workspace]